# rust-bazel-cross-compile-example-llvm-musl

./: BUILD  Cargo.toml  LICENSE  MODULE.bazel  README.md  rust.MODULE.bazel  settings.bzl
.github/workflows/: release.yml
constraints/amd64/: BUILD  defs.bzl
constraints/arm64/: BUILD  defs.bzl
constraints/linker/: BUILD
rust/hello_world/: BUILD
rust/hello_world/src/: main.rs
