"""Configuration for Rust toolchains and dependencies.

This module sets up the Rust toolchain with musl targets, LLVM toolchain with
custom musl sysroots, and required crates for Rust service development.
"""

sysroot = use_repo_rule("@toolchains_llvm//toolchain:sysroot.bzl", "sysroot")

# INTEL/AMD64 musl sysroot.
sysroot(
    name = "sysroot_linux_amd64",
    sha256 = "9c83d10724bed4a077dca35fb67f5ea46c16dcf53087b5b95cbc3417095fa526",
    urls = ["https://github.com/amsokol/cross-compilation-sysroots-musl/releases/download/2026-03-08_3/musl-1.2.5-linux-6.12.76-sysroot-x86_64.tar.xz"],
)

# ARM64 musl sysroot.
sysroot(
    name = "sysroot_linux_arm64",
    sha256 = "714144554d2d66700f0dd0a44dfa1335d8ea13e0fce3882603493d153c13b45c",
    urls = ["https://github.com/amsokol/cross-compilation-sysroots-musl/releases/download/2026-03-08_3/musl-1.2.5-linux-6.12.76-sysroot-aarch64.tar.xz"],
)

# Glibc sysroot for exec (host) tools.  Provides libc headers, libgcc_s, and
# everything the Rust x86_64-unknown-linux-gnu stdlib needs to link, so the
# build doesn't depend on packages installed on the host system.
sysroot(
    name = "sysroot_linux_amd64_glibc",
    sha256 = "7b829b3e0026bbd90fee9fcd8064f930fb16c0fed6702622c70f57002d23550f",
    urls = ["https://github.com/amsokol/cross-compilation-sysroots/releases/download/2026-03-08/debian-trixie-sysroot-amd64.tar.xz"],
)

# ARM64 glibc sysroot for exec (host) tools on ARM64 hosts.
sysroot(
    name = "sysroot_linux_arm64_glibc",
    sha256 = "8989499585d8d25ae962d55c530b930a65c7ac0a7976083c9c8422e88c27f864",
    urls = ["https://github.com/amsokol/cross-compilation-sysroots/releases/download/2026-03-08/debian-trixie-sysroot-arm64.tar.xz"],
)

llvm = use_extension("@toolchains_llvm//toolchain/extensions:llvm.bzl", "llvm", dev_dependency = True)
llvm.toolchain(
    name = "llvm_toolchain",
    extra_llvm_distributions = {
        "LLVM-21.1.8-Linux-ARM64.tar.xz": "65ce0b329514e5643407db2d02a5bd34bf33d159055dafa82825c8385bd01993",
        "LLVM-21.1.8-Linux-X64.tar.xz": "b3b7f2801d15d50736acea3c73982994d025b01c2f035b91ae3b49d1b575732b",
        "LLVM-21.1.8-macOS-ARM64.tar.xz": "b95bdd32a33a81ee4d40363aaeb26728a26783fcef26a4d80f65457433ea4669",
    },
    llvm_version = "21.1.8",
    stdlib = {"": "none"},
)
llvm.sysroot(
    name = "llvm_toolchain",
    label = "@sysroot_linux_amd64//sysroot:sysroot",
    targets = ["linux-x86_64"],
)
llvm.sysroot(
    name = "llvm_toolchain",
    label = "@sysroot_linux_arm64//sysroot:sysroot",
    targets = ["linux-aarch64"],
)
llvm.extra_target_compatible_with(
    name = "llvm_toolchain",
    constraints = ["//constraints/linker:musl"],
)

# A second LLVM toolchain with a glibc sysroot for exec (host) tools.
# The musl toolchain above won't match exec because exec doesn't have
# the linker:musl constraint.  This one uses a glibc sysroot (which
# provides libgcc_s and all glibc headers the Rust GNU stdlib needs)
# so the build is fully hermetic with no host-system dependencies.
llvm.toolchain(
    name = "llvm_toolchain_host",
    extra_llvm_distributions = {
        "LLVM-21.1.8-Linux-ARM64.tar.xz": "65ce0b329514e5643407db2d02a5bd34bf33d159055dafa82825c8385bd01993",
        "LLVM-21.1.8-Linux-X64.tar.xz": "b3b7f2801d15d50736acea3c73982994d025b01c2f035b91ae3b49d1b575732b",
        "LLVM-21.1.8-macOS-ARM64.tar.xz": "b95bdd32a33a81ee4d40363aaeb26728a26783fcef26a4d80f65457433ea4669",
    },
    llvm_version = "21.1.8",
)
llvm.sysroot(
    name = "llvm_toolchain_host",
    label = "@sysroot_linux_amd64_glibc//sysroot:sysroot",
    targets = ["linux-x86_64"],
)
llvm.sysroot(
    name = "llvm_toolchain_host",
    label = "@sysroot_linux_arm64_glibc//sysroot:sysroot",
    targets = ["linux-aarch64"],
)
use_repo(llvm, "llvm_toolchain", "llvm_toolchain_host")

# Register musl toolchain first (higher priority for musl targets),
# then host toolchain as fallback for exec.
register_toolchains(
    "@llvm_toolchain//:all",
    "@llvm_toolchain_host//:all",
    dev_dependency = True,
)

RUST_EDITION = "2024"

RUST_VERSION = "1.94.0"

rust = use_extension("@rules_rust//rust:extensions.bzl", "rust")
rust.toolchain(
    edition = RUST_EDITION,
    extra_target_triples = [
        "aarch64-unknown-linux-musl",
        "x86_64-unknown-linux-musl",
    ],
    versions = [RUST_VERSION],
)

# Override the default Rust repository sets so that musl Rust toolchains
# require the //constraints/linker:musl constraint.  This prevents Bazel
# from selecting the musl Rust toolchain for exec (host) builds while
# keeping it available for cross-compilation targets.
# macOS hosts need no override -- the OS constraint naturally separates them.
rust.repository_set(
    name = "rust_linux_x86_64",
    edition = RUST_EDITION,
    exec_triple = "x86_64-unknown-linux-gnu",
    target_compatible_with = [
        "//constraints/linker:unknown",
        "@platforms//cpu:x86_64",
        "@platforms//os:linux",
    ],
    target_triple = "x86_64-unknown-linux-gnu",
    versions = [RUST_VERSION],
)
rust.repository_set(
    name = "rust_linux_x86_64",
    target_compatible_with = [
        "//constraints/linker:musl",
        "@platforms//cpu:x86_64",
        "@platforms//os:linux",
    ],
    target_triple = "x86_64-unknown-linux-musl",
)
rust.repository_set(
    name = "rust_linux_x86_64",
    target_compatible_with = [
        "//constraints/linker:musl",
        "@platforms//cpu:aarch64",
        "@platforms//os:linux",
    ],
    target_triple = "aarch64-unknown-linux-musl",
)

rust.repository_set(
    name = "rust_linux_aarch64",
    edition = RUST_EDITION,
    exec_triple = "aarch64-unknown-linux-gnu",
    target_compatible_with = [
        "//constraints/linker:unknown",
        "@platforms//cpu:aarch64",
        "@platforms//os:linux",
    ],
    target_triple = "aarch64-unknown-linux-gnu",
    versions = [RUST_VERSION],
)
rust.repository_set(
    name = "rust_linux_aarch64",
    target_compatible_with = [
        "//constraints/linker:musl",
        "@platforms//cpu:x86_64",
        "@platforms//os:linux",
    ],
    target_triple = "x86_64-unknown-linux-musl",
)
rust.repository_set(
    name = "rust_linux_aarch64",
    target_compatible_with = [
        "//constraints/linker:musl",
        "@platforms//cpu:aarch64",
        "@platforms//os:linux",
    ],
    target_triple = "aarch64-unknown-linux-musl",
)

use_repo(rust, "rust_toolchains")

register_toolchains("@rust_toolchains//:all")

cargo = use_extension(
    "@rules_rust//crate_universe:extensions.bzl",
    "crate",
)
cargo.from_cargo(
    name = "cargo",
    cargo_lockfile = "//:Cargo.lock",
    manifests = [
        "//:Cargo.toml",
    ],
)
use_repo(cargo, "cargo")
