"""Configuration for Rust toolchains and dependencies.

This module sets up the Rust toolchain with musl targets, LLVM toolchain with
custom musl sysroots, and required crates for Rust service development.
"""

sysroot = use_repo_rule("@toolchains_llvm//toolchain:sysroot.bzl", "sysroot")

# INTEL/AMD64 musl sysroot.
sysroot(
    name = "sysroot_linux_amd64",
    sha256 = "953318cf5bd6d42fcd59643155db195daf6b6c9ea387f54f2340de6e91f24225",
    urls = ["https://github.com/amsokol/cross-compilation-sysroots-musl/releases/download/2026-04-24/musl-1.2.6-linux-6.12.82-sysroot-x86_64.tar.xz"],
)

# ARM64 musl sysroot.
sysroot(
    name = "sysroot_linux_arm64",
    sha256 = "5e64bf038bacf066f50a060446edead527df1de9a720326aa85a5e1e2e252034",
    urls = ["https://github.com/amsokol/cross-compilation-sysroots-musl/releases/download/2026-04-24/musl-1.2.6-linux-6.12.82-sysroot-aarch64.tar.xz"],
)

# Glibc sysroot for exec (host) tools.  Provides libc headers, libgcc_s, and
# everything the Rust x86_64-unknown-linux-gnu stdlib needs to link, so the
# build doesn't depend on packages installed on the host system.
sysroot(
    name = "sysroot_linux_amd64_glibc",
    sha256 = "227ce21d631774420046065dee4080c001a9e09e6ef01bb4a5e9d73a6701fe41",
    urls = ["https://github.com/amsokol/cross-compilation-sysroots/releases/download/2026-04-24/debian-trixie-sysroot-amd64.tar.xz"],
)

# ARM64 glibc sysroot for exec (host) tools on ARM64 hosts.
sysroot(
    name = "sysroot_linux_arm64_glibc",
    sha256 = "61578c90b6230dc3ade24a08a7961f6a967f56aea0568d044b35ca245eec7941",
    urls = ["https://github.com/amsokol/cross-compilation-sysroots/releases/download/2026-04-24/debian-trixie-sysroot-arm64.tar.xz"],
)

llvm = use_extension("@toolchains_llvm//toolchain/extensions:llvm.bzl", "llvm", dev_dependency = True)
llvm.toolchain(
    name = "llvm_toolchain",
    extra_llvm_distributions = {
        "LLVM-22.1.4-Linux-ARM64.tar.xz": "ac8bed48a6481ccc0e14af18f64d44fc1ca8c0ccf630c1d4dc5e97027e87e6fa",
        "LLVM-22.1.4-Linux-X64.tar.xz": "cdf232e3bc5d9909ddcf8cb7016802c6745a01e69a596747c684caa894a11567",
        "LLVM-22.1.4-macOS-ARM64.tar.xz": "45e0dfc0453624caed5e7b20e224ce8343af9c511c7f59803753a586620d6ad1",
    },
    llvm_version = "22.1.4",
    stdlib = {"": "none"},
)
llvm.sysroot(
    name = "llvm_toolchain",
    label = "@sysroot_linux_amd64//sysroot:sysroot",
    targets = ["linux-x86_64"],
)
llvm.sysroot(
    name = "llvm_toolchain",
    label = "@sysroot_linux_arm64//sysroot:sysroot",
    targets = ["linux-aarch64"],
)
llvm.extra_target_compatible_with(
    name = "llvm_toolchain",
    constraints = ["//constraints/linker:musl"],
)

# A second LLVM toolchain with a glibc sysroot for exec (host) tools.
# The musl toolchain above won't match exec because exec doesn't have
# the linker:musl constraint.  This one uses a glibc sysroot (which
# provides libgcc_s and all glibc headers the Rust GNU stdlib needs)
# so the build is fully hermetic with no host-system dependencies.
llvm.toolchain(
    name = "llvm_toolchain_host",
    extra_llvm_distributions = {
        "LLVM-22.1.4-Linux-ARM64.tar.xz": "ac8bed48a6481ccc0e14af18f64d44fc1ca8c0ccf630c1d4dc5e97027e87e6fa",
        "LLVM-22.1.4-Linux-X64.tar.xz": "cdf232e3bc5d9909ddcf8cb7016802c6745a01e69a596747c684caa894a11567",
        "LLVM-22.1.4-macOS-ARM64.tar.xz": "45e0dfc0453624caed5e7b20e224ce8343af9c511c7f59803753a586620d6ad1",
    },
    llvm_version = "22.1.4",
)
llvm.sysroot(
    name = "llvm_toolchain_host",
    label = "@sysroot_linux_amd64_glibc//sysroot:sysroot",
    targets = ["linux-x86_64"],
)
llvm.sysroot(
    name = "llvm_toolchain_host",
    label = "@sysroot_linux_arm64_glibc//sysroot:sysroot",
    targets = ["linux-aarch64"],
)
use_repo(llvm, "llvm_toolchain", "llvm_toolchain_host")

# Register musl toolchain first (higher priority for musl targets),
# then host toolchain as fallback for exec.
register_toolchains(
    "@llvm_toolchain//:all",
    "@llvm_toolchain_host//:all",
    dev_dependency = True,
)

RUST_EDITION = "2024"

RUST_VERSION = "1.95.0"

rust = use_extension("@rules_rust//rust:extensions.bzl", "rust")
rust.toolchain(
    edition = RUST_EDITION,
    extra_target_triples = [
        "aarch64-unknown-linux-musl",
        "x86_64-unknown-linux-musl",
    ],
    versions = [RUST_VERSION],
)

# Override the default Rust repository sets so that musl Rust toolchains
# require the //constraints/linker:musl constraint.  This prevents Bazel
# from selecting the musl Rust toolchain for exec (host) builds while
# keeping it available for cross-compilation targets.
# macOS hosts need no override -- the OS constraint naturally separates them.
rust.repository_set(
    name = "rust_linux_x86_64",
    edition = RUST_EDITION,
    exec_triple = "x86_64-unknown-linux-gnu",
    target_compatible_with = [
        "//constraints/linker:unknown",
        "@platforms//cpu:x86_64",
        "@platforms//os:linux",
    ],
    target_triple = "x86_64-unknown-linux-gnu",
    versions = [RUST_VERSION],
)
rust.repository_set(
    name = "rust_linux_x86_64",
    target_compatible_with = [
        "//constraints/linker:musl",
        "@platforms//cpu:x86_64",
        "@platforms//os:linux",
    ],
    target_triple = "x86_64-unknown-linux-musl",
)
rust.repository_set(
    name = "rust_linux_x86_64",
    target_compatible_with = [
        "//constraints/linker:musl",
        "@platforms//cpu:aarch64",
        "@platforms//os:linux",
    ],
    target_triple = "aarch64-unknown-linux-musl",
)
rust.repository_set(
    name = "rust_linux_aarch64",
    edition = RUST_EDITION,
    exec_triple = "aarch64-unknown-linux-gnu",
    target_compatible_with = [
        "//constraints/linker:unknown",
        "@platforms//cpu:aarch64",
        "@platforms//os:linux",
    ],
    target_triple = "aarch64-unknown-linux-gnu",
    versions = [RUST_VERSION],
)
rust.repository_set(
    name = "rust_linux_aarch64",
    target_compatible_with = [
        "//constraints/linker:musl",
        "@platforms//cpu:x86_64",
        "@platforms//os:linux",
    ],
    target_triple = "x86_64-unknown-linux-musl",
)
rust.repository_set(
    name = "rust_linux_aarch64",
    target_compatible_with = [
        "//constraints/linker:musl",
        "@platforms//cpu:aarch64",
        "@platforms//os:linux",
    ],
    target_triple = "aarch64-unknown-linux-musl",
)
use_repo(rust, "rust_toolchains")

register_toolchains("@rust_toolchains//:all")

cargo = use_extension(
    "@rules_rust//crate_universe:extensions.bzl",
    "crate",
)
cargo.from_cargo(
    name = "cargo",
    cargo_lockfile = "//:Cargo.lock",
    manifests = [
        "//:Cargo.toml",
    ],
)
use_repo(cargo, "cargo")
